# xtr

./: .clang-format  .gitignore  CMakeLists.txt  README.md  xtr_main.cpp
data/models/: Suzanne.ply
data/shaders/: basic.frag  basic.vert  buffer_pass.frag  mesh.frag  mesh.vert  screen.frag  screen.vert  screen_loa.frag  screen_outline.frag  screen_pp.frag  screen_xtoon.frag  test.frag
data/textures/: fig-10b.ppm  fig-10c.ppm  fig-10d.ppm  fig-11b.ppm  fig-11c.ppm  fig-11d.ppm  fig-7b.ppm  fig-7d.ppm  fig-8a.ppm  fig-8b.ppm  fig-9b.ppm  fig-9c.ppm  fig-9e.ppm  fig-9f.ppm
include/: xtr_app.h  xtr_buffer.h  xtr_camera.h  xtr_framebuffer.h  xtr_mesh.h  xtr_mesh_pass.h  xtr_obj.h  xtr_screen_pass.h  xtr_shader.h  xtr_texture.h
src/: xtr_app.cpp
